Bug 1852587 - Disable font preloads if the downloadable_fonts pref is turned off. r=necko-reviewers,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D188113